cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: yuval-skillup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: 253650698585.dkr.ecr.us-east-1.amazonaws.com/youval.mejerowicz-skillup-ecr:backend
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        volumeMounts:
        - name: datasource-config-volume
          mountPath: /app/application.properties
          subPath: application.properties
      imagePullSecrets:
      - name: ecr-registry-secret
      volumes:
      - name: datasource-config-volume
        configMap:
          name: datasource-config
