cluster/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: yuval-skillup
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8081       # Service port
    targetPort: 8080 # Container port
  type: ClusterIP  # Change to NodePort or LoadBalancer if needed
