cluster/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: yuval-skillup
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80       # Service port
    targetPort: 80 # Container port
    nodePort: 30080
  type: NodePort  # Change to NodePort or LoadBalancer if needed
